# CasioEmuMsvc

./: .gitattributes  .gitignore  .gitmodules  AGENT.md  CMakeLists.txt  CMakeSettings.json  CasioEmuMsvc.sln  GB2UTF8.ps1  PRIVACY.md  README.md  build-arch.sh  build-ios.sh  build-linux.sh  build-macos.sh  convert_all_lua_config.ps1  gradle.properties  mingw-toolchain.cmake
.github/workflows/: Release.yml  build.yml  msbuild.yml
.jules/: bolt.md  sentinel.md
CasioEmuMsvc/: .clang-format  Android.mk  CMakeLists.txt  CasioEmuMsvc.vcxproj  CasioEmuMsvc.vcxproj.filters  GitInfo.ps1  GitInfo.sh  Resource.rc  packages.config  resource.h
CasioEmuMsvc/locales/: de_DE.lc  en_US.lc  es_ES.lc  fr_FR.lc  ja_JP.lc  ko_KR.lc  ru_RU.lc  vi_VN.lc  zh_CN.lc
CasioEmuMsvc/src/: Binary.h  Compress.h  Config.hpp  Emulator.cpp  Emulator.hpp  ModelInfo.h  Models.h  Settings.h  Snapshot.cpp  Snapshot.h  casioemu.cpp  git_info.h  sdl_win32_extra.cpp  sdl_win32_extra.h  stringhelper.h
CasioEmuMsvc/src/Chipset/: CPU.cpp  CPU.hpp  CPUArithmetic.cpp  CPUControl.cpp  CPULoadStore.cpp  CPUPushPop.cpp  Chipset.cpp  Chipset.hpp  InterruptSource.cpp  InterruptSource.hpp  MMU.cpp  MMU.hpp  MMURegion.cpp  MMURegion.hpp  ePSCpu.cpp  ePSCpu.h
CasioEmuMsvc/src/Containers/: ConcurrentObject.h
CasioEmuMsvc/src/CrashHandler/: CrashHandler.cpp
CasioEmuMsvc/src/Ext/: 3rd_licenses.h  ConsoleText.cpp  DiscordRPC.cpp  DiscordRPC.h  GameBuffer.cpp  GameBuffer.h  IOSNativeBridge.h  IOSNativeBridge.mm  LabelFile.h  Logger.hpp  Random.hpp  RomPackage.h  Romu.cpp  Romu.h  SysDialog.cpp  SysDialog.h  U8Disas.cpp  U8Disas.h  ePSDisas.cpp  ePSDisas.h  vibration.cpp  vibration.h
CasioEmuMsvc/src/Ext/cam/: cam.cc  cam.h  hct.cc  hct.h  hct_solver.cc  hct_solver.h  tones.cc  tones.h  utils.cc  viewing_conditions.cc
CasioEmuMsvc/src/Gui/: 5800FileSystem.cpp  5800FileSystem.h  AddressWindow.cpp  AddressWindow.h  BitmapViewer.cpp  BitmapViewer.h  CalculatorWindow.h  CallAnalysis.cpp  CallAnalysis.h  CodeViewer.cpp  CodeViewer.hpp  CwiiHelp.h  Editors.cpp  Editors.h  FileDialog.cpp  FileDialog.hpp  Gui.h  Hooks.cpp  Hooks.h  HwController.cpp  HwController.h  IDEWindows.cpp  IDEWindows.h  Injector.cpp  Injector.hpp  LabelViewer.cpp  LabelViewer.h  Localization.cpp  Localization.h  MemBreakPoint.cpp  MemBreakPoint.hpp  PluginLogWindow.cpp  PluginLogWindow.hpp  PopUpDisplay.h  SearchWindow.cpp  SearchWindow.hpp  Setting.cpp  Setting.h  SnapshotWindow.cpp  SnapshotWindow.h  (+12 more)
CasioEmuMsvc/src/Gui/imgui/: TextEditor.cpp  imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_sdl2.cpp  imgui_tables.cpp  imgui_widgets.cpp
CasioEmuMsvc/src/JitU8/: JitU8.cpp
CasioEmuMsvc/src/Peripheral/: 5800Flash.cpp  5800Flash.h  Audio.cpp  Audio.h  BCDCalc.cpp  BCDCalc.hpp  BatteryBackedRAM.cpp  BatteryBackedRAM.hpp  ExternalInterrupts.cpp  ExternalInterrupts.hpp  Flash.cpp  Flash.hpp  IOPorts.cpp  IOPorts.hpp  Keyboard.cpp  Keyboard.hpp  ML620Ports.cpp  ML620Ports.h  Miscellaneous.cpp  Miscellaneous.hpp  Peripheral.hpp  PowerSupply.cpp  PowerSupply.hpp  ROMWindow.cpp  ROMWindow.hpp  RealTimeClock.cpp  RealTimeClock.hpp  Screen.cpp  Screen.hpp  Spi.cpp  Spi.h  StandbyControl.cpp  StandbyControl.hpp  Timer.cpp  Timer.hpp  TimerBaseCounter.cpp  TimerBaseCounter.hpp  Uart.cpp  Uart.h  VoltageLevelSupervisor.cpp  (+2 more)
CasioEmuMsvc/src/Peripheral/SD/: FakeSdCard.h  HowToCreateASDCard.md
CasioEmuMsvc/src/Plugin/: PluginApi.h  PluginApi_Impl.cpp  PluginMan.cpp  PluginMan.h
CasioEmuMsvc/src/StartupUi/: StartupUi.cpp  StartupUi.h
CasioEmuMsvc/src/Web/: core_api.cpp  web_main.cpp
CasioEmuMsvc/src/legacy/trash/: Assemblier.cpp  Assemblier.h  CasioData.cpp  CasioData.h  ePS6800.cpp
CasioEmuMsvc/src/legacy/trash/Assemblier/: U8Emitter.h
CasioEmuMsvc/src/legacy/trash/Dcl/: ChipsetInfo.h
CasioEmuMsvc/src/locales/: lang.h
CasioEmuMsvc/web/: README.md  build_core_web.ps1  build_web.ps1  shell.html
Cw2toolsPlugin/: Cw2toolsPlugin.vcxproj  Cw2toolsPlugin.vcxproj.filters  ModelInfo.h  PluginApi.h  dllmain.cpp
Cw2toolsPlugin/imgui/: imstb_textedit.h
ExamplePlugin/: CMakeLists.txt  ExamplePlugin.vcxproj  ExamplePlugin.vcxproj.filters  PluginApi.h  dllmain.cpp
ExamplePlugin/imgui/: imconfig.h  imgui_internal.h
MacResources/: AppIcon.icns  BundleFix.cmake  Info.plist
McpPlugin/: Binary.h  McpPlugin.vcxproj  McpPlugin.vcxproj.filters  PluginApi.h  dllmain.cpp  framework.h
PythonPlugin/: PythonPlugin.vcxproj  PythonPlugin.vcxproj.filters  dllmain.cpp  packages.config
PythonPlugin/imgui/: imgui.h
RomPacker/: RomPacker.cpp  RomPacker.vcxproj  RomPacker.vcxproj.filters
app/: build.gradle  hieuxyz.keystore
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tele/u8emulator/: FileUtils.java  Game.java  PermissionManager.java  SystemDialogs.java
app/src/main/java/org/libsdl/app/: SDLActivity.java
app/src/main/res/values/: strings.xml
cw2tools_en/: FontWindow.xaml  FontWindow.xaml.cs  LocalStrings.xaml  LocalStrings.xaml.cs  MainMenuEditor.xaml  MainWindow.xaml  MenuEditWindow.xaml  MenuEditor.xaml
discord-rpc/: CMakeLists.txt
discord-rpc/include/: discord_rpc.h
discord-rpc/src/: connection_unix.cpp  serialization.cpp
docs/: README.en.md  README.vi.md  README.zh-CN.md
iOSresources/: Info.plist
lua_config_convert/: CMakeLists.txt  a.h  lua_config_convert.cpp  lua_config_convert.vcxproj  lua_config_convert.vcxproj.filters  model.lua  packages.config
lua_config_convert/lua-5.4.8/: CMakeLists.txt
lua_config_convert/lua-5.4.8/src/: luaconf.h
